# code021

./: .editorconfig  .gitignore  README.md  reademe.md
CCpp/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  main.cpp  opcv.cpp
CCpp/lib/: CMakeLists.txt
Py/: dd.py
Py/src/: cv.py  hello.py
Py/src/show/: matplot.py  opcv.py
Py/src/view/: matlot.py
